@@ -1,3 +1,8 @@
+2014-09-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* filefuncs.awk: Change to build directory instead of "..".
+	* Makefile.am (filefuncs): Pass in $(abs_top_builddir).
+
 2014-09-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* functab4.awk: Changed to use stat instead of chdir since
